--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "author": "Naoya Yamashita <conao3@gmail.com>",
   "license": "MIT",
+  "private": true,
   "devDependencies": {
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0"
