--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "Naoya Yamashita <conao3@gmail.com>",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "build": "webpack"
+  },
   "devDependencies": {
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0"
