--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "webpack"
   },
   "devDependencies": {
+    "css-loader": "^5.0.2",
+    "style-loader": "^2.0.0",
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0"
   },
