--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "webpack"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
     "html-webpack-plugin": "^5.1.0",
     "style-loader": "^2.0.0",
