--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "webpack serve --open"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.168",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
     "html-webpack-plugin": "^5.1.0",
