--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^5.0.2",
     "html-webpack-plugin": "^5.1.0",
+    "html-webpack-template": "^6.2.0",
     "vue-loader": "^15.9.6",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.12",
